# corofx

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Config.cmake.in  README.md
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: build.yml  ci.yml  codeql.yml
cmake/: AddExample.cmake  AddTest.cmake  MyBuildOptions.cmake  MyLLVMTools.cmake  ProjectSetup.cmake
example/: CMakeLists.txt  generator.cpp  raise.cpp
examples/: CMakeLists.txt  raise.cpp  state.cpp  yield.cpp
include/corofx/: check.hpp  config.hpp  effect.hpp  frame.hpp  handler.hpp  promise.hpp  task.hpp  trace.hpp
include/corofx/detail/: type_id.hpp  type_set.hpp
src/: check.cpp  effect.cpp  frame.cpp  handler.cpp  promise.cpp  task.cpp  trace.cpp
src/detail/: type_id.cpp  type_set.cpp
test/: CMakeLists.txt  test_chained.cpp  test_combined.cpp  test_io.cpp  test_nested.cpp  test_recursive.cpp  test_type_set.cpp
tests/: CMakeLists.txt  test_chained.cpp  test_combined.cpp  test_move.cpp  test_nested.cpp  test_recursive.cpp  test_task_move.cpp  test_type_set.cpp  test_void.cpp
tools/: ci_report.py  cov2md.py
